# hover

./: .cursorignore  .env.example  .gitignore  README.md  config.py  main.py  preprocessing_pipeline_analysis.md  pyproject.toml
data/features/: dataset_analysis.py
data/processed/: audio_to_features.py
data/raw/: README.md
data/raw/pre-process-code/: convertion_mp3_war.py  create_singal_csv.py  delete_mfcc.py  file_with_folder_name.json  make_mfcc.py  resampling.py  splitting.py
data/raw/pre-process-code/for_labels/: Readme  check_to_all_for_label_csv.py  copy_data_to_dataset.py  (+4 more)
hyperparameter/: tune.py
notebook/: evaluate.ipynb  hyperparameter.ipynb  preprocess.ipynb  training_model.ipynb
src/: config.py  main.py
src/deploy/: README.md  live_detection.py  live_detection_cli.py
src/feature_engineering/: feature_loader.py
src/feature_extraction/: features.py
src/hyperparameter/: README.md  tune.py
src/models/: classifier.py  cnn_model.py  deep_learning_model.py  lstm_model.py  transformer_model.py
src/preprocessing/: config.py  label_mapping.yaml  main_preprocess.py  preprocess_hf.ipynb  preprocessing.py  run_preprocessing.py  step_1_convert_and_resample.py  step_1_convert_to_wav.py  step_1_resample.py  step_2_process copy.py  step_2_process.py  step_2_resample.py  step_2_split_and_extract.py  step_3_split.py  step_4_extract_features.py  step_5_create_label.py
src/preprocessing/utils/: __init__.py  audio_utils.py  label_utils.py  path_utils.py
src/training/: evaluate.py  train.py
src/utils/: __init__.py  hardware.py  loader.py  metric.py
