[project]
name = "Hover"
version = "0.0.1"
description = "Acoustic Drone Detection System"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tensorflow>=2.19.0",
]
