[project]
name = "Hover"
version = "0.0.1"
description = "Acoustic Drone Detection System"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "datasets>=3.5.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "python-dotenv",
    "transformers>=4.51.3",
    "torch>=2.7.0",
    "evaluate>=0.4.3",
    "accelerate>=1.6.0",
]
